--- a/Trading-System.cabal
+++ b/Trading-System.cabal
@@ -3,21 +3,27 @@ name:                Trading-System
 version:             0.1.0.0
 build-type:          Simple
 
--- We assume base >= 4.14 if GHC 8.10+ is used. Adjust for your environment.
--- library
---   exposed-modules:
---   -- (Optionally, you list modules that you want to expose for the library part.)
---   build-depends:       base >=4.14 && <=4.17.2.1
---   default-language:     Haskell2010
---   hs-source-dirs:      .
-  -- You can add more modules/files, or rearrange hs-source-dirs if needed.
 
--- Each "executable" stanza tells cabal how to build a standalone binary.
+library
+  exposed-modules:
+    Utils,
+    DataTypes
+  build-depends:       
+    base >=4.14 && <=4.17.2.1, 
+    containers >=0.6 && <0.7,
+    aeson,
+    text,
+    time
+  default-language:     Haskell2010
+  hs-source-dirs:      Lib
+
+
 
 executable live-engine
   main-is:             Trade-Engines/live-engine.hs
   build-depends:       
     base >=4.14 && <=4.17.2.1,
+    Trading-System,
     hmatrix,
     websockets,
     network,
@@ -32,7 +38,6 @@ executable live-engine
     ., 
     Algos/
   other-modules: 
-    DataTypes,
     LVRH,
     BRH
 
