--- a/Trading-System.cabal
+++ b/Trading-System.cabal
@@ -6,55 +6,61 @@ build-type:          Simple
 
 library
   exposed-modules:
-    Utils,
-    DataTypes
-  build-depends:       
-    base >=4.14 && <=4.17.2.1, 
+    Lib.DataTypes,
+    Algos.LVRH,
+    Algos.BRH
+  other-modules:
+    Lib.Utils
+  build-depends:
+    base >=4.14 && <4.15,
     containers >=0.6 && <0.7,
     aeson,
     text,
-    time
-  default-language:     Haskell2010
-  hs-source-dirs:      Lib
-
+    time >=1.9.3 && <1.13,
+    bytestring,
+    hmatrix >=0.20.2,
+    accelerate,
+    accelerate-llvm-ptx
+  default-language: Haskell2010
+  hs-source-dirs: .
 
 
 executable live-engine
   main-is:             Trade-Engines/live-engine.hs
-  build-depends:       
-    base >=4.14 && <=4.17.2.1,
-    Trading-System,
-    hmatrix,
+  build-depends: 
+    Trading-System,      
+    base >=4.14 && <4.15,
+    hmatrix >= 0.20.2,
     websockets,
     network,
     wuss,
     aeson,
-    aeson-pretty,
     bytestring,
     text,
-    time
+    time >=1.9.3 && <1.13,
+    containers >=0.6 && <0.7,
+    accelerate,
+    accelerate-llvm-ptx
   default-language:     Haskell2010
-  hs-source-dirs: 
-    ., 
-    Algos/
-  other-modules: 
-    LVRH,
-    BRH
+  hs-source-dirs: .
+
 
 executable backward-engine
   main-is:             Trade-Engines/backward-engine.hs
-  build-depends:       base >=4.14 && <=4.17.2.1
+  build-depends:       
+    base >=4.14 && <4.15,
+    hmatrix >= 0.20.2
   default-language:     Haskell2010
   hs-source-dirs:      .
 
 executable train
   main-is:             ML/train.hs
-  build-depends:       base >=4.14 && <=4.17.2.1
+  build-depends:       base >=4.14 && <4.15
   default-language:     Haskell2010
   hs-source-dirs:      .
 
 executable acquire
   main-is:             Historical-Data/acquire.hs
-  build-depends:      base >=4.14 && <=4.17.2.1 
+  build-depends:      base >=4.14 && <4.15 
   default-language:     Haskell2010
   hs-source-dirs:      .
