--- a/Trading-System.cabal
+++ b/Trading-System.cabal
@@ -47,7 +47,19 @@ executable live-engine
   default-language:     Haskell2010
   hs-source-dirs: .
 
-
+executable test-speed
+  main-is: test-speed.hs 
+  build-depends:
+    Trading-System,
+    base >=4.14 && <4.15,
+    hmatrix,
+    accelerate,
+    accelerate-llvm-ptx,
+    time,
+    deepseq
+  default-language:     Haskell2010
+  hs-source-dirs: .
+  ghc-options:         -threaded
 executable backward-engine
   main-is:             Trade-Engines/backward-engine.hs
   build-depends:       
