--- a/Trading-System.cabal
+++ b/Trading-System.cabal
@@ -20,6 +20,7 @@ library
     aeson,
     text,
     time,
+    list,
     bytestring,
     hmatrix,
     accelerate,
@@ -41,6 +42,7 @@ executable live-engine
     bytestring,
     text,
     time,
+    list,
     containers,
     accelerate,
     accelerate-llvm-ptx
